--- a/project/src/main/res/values-sw720dp/dimens.xml
+++ b/project/src/main/res/values-sw720dp/dimens.xml
@@ -44,12 +44,18 @@
     <!-- Search Results -->
     <dimen name="results_list_header_text_size">19sp</dimen>
     <dimen name="results_list_header_height">56dp</dimen>
+    <dimen name="results_list_header_height_expanded">72dp</dimen>
+    <dimen name="results_list_header_reveal_height">16dp</dimen>
+    <dimen name="results_list_header_text_margin_top">14dp</dimen>
+    <dimen name="results_list_subtitle_text_margin_top">36dp</dimen>
     <dimen name="results_guest_picker_padding_x">24dp</dimen>
     <dimen name="tablet_result_row_primary_text_size">16sp</dimen>
     <dimen name="tablet_result_row_price_size">21sp</dimen>
     <dimen name="results_list_spacer_height">20dp</dimen>
     <!-- note: make sure that results_list_margin_top = results_list_header_height - results_list_spacer_height -->
     <dimen name="results_list_margin_top">36dp</dimen>
+    <dimen name="results_list_flight_subtitle_text_size">15sp</dimen>
+    <dimen name="results_flight_filters_header_margin_top">14dp</dimen>
     <!-- Text size for destination label - search screen, left container element -->
     <dimen name="search_params_destination_text_size">25sp</dimen>
     <!-- Text size for search param labels - search screen, right container elements -->
