--- a/project/src/main/res/layout/fragment_tablet_results_flight_list.xml
+++ b/project/src/main/res/layout/fragment_tablet_results_flight_list.xml
@@ -4,50 +4,48 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- The list view -->
-
-    <com.expedia.bookings.widget.FruitList
-        android:id="@android:id/list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/results_list_margin_top"
-        android:cacheColorHint="@color/tablet_white_pane_bg"
-        android:choiceMode="singleChoice"
-        android:divider="@color/tablet_white_pane_bg"
-        android:dividerHeight="@dimen/results_list_spacer_height"
-        android:listSelector="@android:color/transparent"
-        android:scrollbars="none"
-        app:footerSpacerColor="@color/tablet_white_pane_bg"
-        app:headerSpacerColor="@android:color/transparent" />
-
     <!-- The sticky header view -->
 
     <com.expedia.bookings.widget.TouchableFrameLayout
         android:id="@+id/sticky_header_container"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/results_list_header_height"
-        android:background="@color/tablet_white_pane_bg"
+        android:layout_height="@dimen/results_list_header_height_expanded"
         android:gravity="center_vertical"
         android:layout_margin="0dp"
+        android:background="@color/tablet_white_pane_bg"
         android:visibility="visible">
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/sticky_number_of_items"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical|left"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginTop="@dimen/results_list_header_text_margin_top"
             android:layout_marginLeft="@dimen/hotel_flight_card_padding_x"
             android:gravity="center_vertical|left"
             android:textSize="@dimen/results_list_header_text_size"
             app:textStyle="light" />
 
         <com.expedia.bookings.widget.TextView
+            android:id="@+id/sticky_subtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginTop="@dimen/results_list_subtitle_text_margin_top"
+            android:layout_marginLeft="@dimen/hotel_flight_card_padding_x"
+            android:gravity="center_vertical|left"
+            android:textColor="#595959"
+            android:textSize="@dimen/results_list_flight_subtitle_text_size"
+            app:textStyle="light" />
+
+        <com.expedia.bookings.widget.TextView
             android:id="@+id/top_right_text_button"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical|right"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:gravity="center_vertical"
+            android:layout_marginTop="@dimen/results_list_header_text_margin_top"
             android:layout_marginRight="@dimen/hotel_flight_card_padding_x"
-            android:gravity="center_vertical|right"
             android:paddingLeft="8dp"
             android:textColor="#6a6a6a"
             android:textSize="12dp"
@@ -55,4 +53,9 @@
             app:textStyle="bold" />
     </com.expedia.bookings.widget.TouchableFrameLayout>
 
+    <!-- The list view -->
+
+    <com.expedia.bookings.widget.FruitList
+        style="@style/V2.Widget.ListView.TabletResultsFruitList.Flights"
+        android:id="@android:id/list" />
 </FrameLayout>
