--- a/project/src/main/res/drawable/bg_checkout_information_top_tab_pressed.xml
+++ b/project/src/main/res/drawable/bg_checkout_information_top_tab_pressed.xml
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <nine-patch android:src="@drawable/bg_tablet_checkout_information_single_normal"/>
+        <nine-patch android:src="@drawable/bg_checkout_information_top_tab_normal"/>
     </item>
     <item>
         <shape>
-            <corners android:radius="2dp"/>
+            <corners android:topLeftRadius="2dp" android:topRightRadius="2dp"/>
             <solid android:color="#44000000"/>
         </shape>
     </item>
