--- a/project/src/main/res/layout/fragment_tablet_results_flights.xml
+++ b/project/src/main/res/layout/fragment_tablet_results_flights.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -15,6 +16,30 @@
         android:layout_height="wrap_content"
         android:layout_gravity="top"
         android:background="@drawable/top_gradient_global"/>
+
+    <com.expedia.bookings.widget.FrameLayout
+        android:id="@+id/route_desc_container"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp">
+
+        <com.expedia.bookings.widget.AutoResizeTextView
+            android:id="@+id/route_description_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:shadowColor="#88000000"
+            android:shadowDx="0"
+            android:shadowDy="4"
+            android:shadowRadius="5"
+            android:textColor="#FFFFFF"
+            android:textSize="22sp"
+            app:minTextSize="16sp"
+            app:maxTextSize="22sp"
+            app:textStyle="medium"/>
+    </com.expedia.bookings.widget.FrameLayout>
 
     <!-- FLIGHT LEG CONTAINER -->
     <com.expedia.bookings.widget.FrameLayoutTouchController
