--- a/project/src/main/res/layout-port/snippet_trip_bucket_expanded_dates_view.xml
+++ b/project/src/main/res/layout-port/snippet_trip_bucket_expanded_dates_view.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="@dimen/tablet_checkout_trip_bucket_expanded_padding_x" >
+    android:padding="@dimen/tablet_checkout_trip_bucket_expanded_padding_x">
 
     <com.expedia.bookings.widget.TextView
         android:id="@+id/now_booking_text_view"
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="17dp"
         android:gravity="center_vertical"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/num_travelers_text_view"
@@ -55,7 +55,6 @@
             app:textStyle="light" />
 
 
-
     </LinearLayout>
 
     <com.expedia.bookings.widget.TextView
@@ -72,27 +71,17 @@
 
     <com.expedia.bookings.widget.TextView
         android:id="@+id/free_cancellation_text_view"
+        style="@style/AmenitiesOnTablet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="17dp"
-        android:drawableLeft="@drawable/ic_tablet_checkout_free_cancellation_checkmark"
-        android:drawablePadding="8dp"
-        android:textColor="#444444"
-        android:textSize="14sp"
-        android:visibility="gone"
-        app:textStyle="light" />
+        android:layout_marginBottom="17dp" />
 
     <com.expedia.bookings.widget.TextView
         android:id="@+id/price_guarantee_text_view"
+        style="@style/AmenitiesOnTablet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="17dp"
-        android:drawableLeft="@drawable/ic_tablet_checkout_free_cancellation_checkmark"
-        android:drawablePadding="8dp"
-        android:textColor="#444444"
-        android:textSize="14sp"
-        android:visibility="gone"
-        app:textStyle="light" />
+        android:layout_marginBottom="17dp" />
 
     <View
         android:layout_width="match_parent"
@@ -104,9 +93,7 @@
         android:layout_height="@dimen/one_px_hdpi_two_px_xhdpi"
         android:background="@color/divider_grey" />
 
-    <include
-        layout="@layout/snippet_trip_bucket_expanded_price"
-        />
+    <include layout="@layout/snippet_trip_bucket_expanded_price" />
 
 
 </LinearLayout>
