--- a/project/src/main/res/layout/snippet_trip_bucket_expanded_dates_view.xml
+++ b/project/src/main/res/layout/snippet_trip_bucket_expanded_dates_view.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="@dimen/tablet_checkout_trip_bucket_expanded_padding_x" >
+    android:padding="@dimen/tablet_checkout_trip_bucket_expanded_padding_x">
 
     <com.expedia.bookings.widget.TextView
         android:id="@+id/room_type_text_view"
@@ -66,46 +66,25 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginTop="12dp"
         android:gravity="center_vertical"
         android:orientation="vertical">
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/free_cancellation_text_view"
+            style="@style/AmenitiesOnTablet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="6dp"
-            android:drawableLeft="@drawable/ic_tablet_checkout_free_cancellation_checkmark"
-            android:drawablePadding="8dp"
-            android:textColor="#444444"
-            android:textSize="14sp"
-            android:visibility="gone"
-            app:textStyle="light" />
+            android:layout_marginBottom="6dp" />
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/price_guarantee_text_view"
+            style="@style/AmenitiesOnTablet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="6dp"
-            android:drawableLeft="@drawable/ic_tablet_checkout_free_cancellation_checkmark"
-            android:drawablePadding="8dp"
-            android:textColor="#444444"
-            android:textSize="14sp"
-            android:visibility="gone"
-            app:textStyle="light" />
+            android:layout_marginBottom="6dp" />
 
-        <com.expedia.bookings.widget.TextView
-            android:id="@+id/third_amenity_text_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="6dp"
-            android:drawableLeft="@drawable/ic_tablet_checkout_free_cancellation_checkmark"
-            android:drawablePadding="8dp"
-            android:textColor="#444444"
-            android:textSize="14sp"
-            android:visibility="gone"
-            app:textStyle="light" />
     </LinearLayout>
 
     <View
@@ -118,7 +97,6 @@
         android:layout_height="@dimen/one_px_hdpi_two_px_xhdpi"
         android:background="@color/divider_grey" />
 
-    <include
-        layout="@layout/snippet_trip_bucket_expanded_price" />
+    <include layout="@layout/snippet_trip_bucket_expanded_price" />
 
 </LinearLayout>
