--- a/project/src/main/res/values-sw600dp/colors.xml
+++ b/project/src/main/res/values-sw600dp/colors.xml
@@ -31,6 +31,7 @@
     <color name="amenity_icon_color">#4c6680</color>
     <color name="tablet_room_rate_more_info_pressed">#20000000</color>
     <color name="tablet_hotel_selected_overlay">#B34180d9</color>
+    <color name="tablet_hotel_selected_mobile_exclusive_overlay">#B32a538c</color>
     <color name="tablet_hotel_pressed_overlay">#7f4572ad</color>
 
     <!-- Tablet Flights -->
