--- a/project/src/main/res/layout/fragment_results_recursive_flight_legs.xml
+++ b/project/src/main/res/layout/fragment_results_recursive_flight_legs.xml
@@ -34,13 +34,14 @@
             android:id="@+id/last_flight_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/tablet_white_pane_bg"
+            android:background="#E6E6E6"
             android:visibility="gone">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" >
+                android:orientation="vertical"
+                android:paddingBottom="16dp">
 
                 <com.expedia.bookings.widget.TextView
                     android:id="@+id/last_flight_header"
