--- a/project/src/main/res/values/dimens.xml
+++ b/project/src/main/res/values/dimens.xml
@@ -170,7 +170,8 @@
     <dimen name="margin_top_sale_ribbon_room_rates">20dp</dimen>
 
     <!-- Account support dimensions -->
-    <dimen name="card_icon_padding_left">15dp</dimen>
+    <dimen name="login_button_icon_padding_left">-3dp</dimen>
+    <dimen name="login_button_icon_padding_right">1dp</dimen>
     <dimen name="card_icon_padding">5dp</dimen>
 
     <!-- Coupon code dimensions -->
