3502: Updated trip bucket amenities formatting - smaller and lighter amenities text - checkmark aligned with num travelers icon in landscape - checkmark removed from potrait

--- a/project/src/main/res/layout/snippet_trip_bucket_expanded_dates_view.xml
+++ b/project/src/main/res/layout/snippet_trip_bucket_expanded_dates_view.xml
@@ -66,24 +66,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="13dp"
         android:layout_marginTop="12dp"
         android:gravity="center_vertical"
         android:orientation="vertical">
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/free_cancellation_text_view"
-            style="@style/AmenitiesOnTablet"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="6dp" />
+            style="@style/AmenitiesTabletText.Landscape"/>
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/price_guarantee_text_view"
-            style="@style/AmenitiesOnTablet"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="6dp" />
+            style="@style/AmenitiesTabletText.Landscape"/>
 
     </LinearLayout>
 
