--- a/project/src/main/res/layout-port/snippet_trip_bucket_expanded_dates_view.xml
+++ b/project/src/main/res/layout-port/snippet_trip_bucket_expanded_dates_view.xml
@@ -71,16 +71,12 @@
 
     <com.expedia.bookings.widget.TextView
         android:id="@+id/free_cancellation_text_view"
-        style="@style/AmenitiesOnTablet"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/AmenitiesTabletText"
         android:layout_marginBottom="17dp" />
 
     <com.expedia.bookings.widget.TextView
         android:id="@+id/price_guarantee_text_view"
-        style="@style/AmenitiesOnTablet"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/AmenitiesTabletText"
         android:layout_marginBottom="17dp" />
 
     <View
