--- a/project/src/main/res/layout/snippet_tablet_room_rate_add_select.xml
+++ b/project/src/main/res/layout/snippet_tablet_room_rate_add_select.xml
@@ -34,16 +34,9 @@
             android:singleLine="true"
             android:textColor="#5f6061"
             android:textSize="@dimen/hotel_details_bed_type_text_size"
-            app:textStyle="light" />
+            android:ellipsize="end"
+            app:textStyle="light"/>
 
-        <com.expedia.bookings.widget.TextView
-            android:id="@+id/text_free_cancellation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:textColor="#008c5d"
-            android:textSize="@dimen/hotel_details_bed_type_text_size"
-            app:textStyle="light" />
     </LinearLayout>
 
     <com.expedia.bookings.widget.TextView
