3537 TripBucket sizing in portrait for N9
The trip bucket pane was not allocating enough vertical space in portrait. This commit
increases the percentage of the screen height that is used for the trip bucket pane on
the results portrait screen.

--- a/project/src/main/res/values-sw720dp-port/dimens.xml
+++ b/project/src/main/res/values-sw720dp-port/dimens.xml
@@ -5,6 +5,7 @@
 
     <!-- Trip Bucket -->
     <dimen name="hotel_flight_card_width">335dp</dimen>
+    <fraction name="results_grid_tripbucket_height">23%</fraction>
 
     <!-- Checkout -->
     <dimen name="tablet_checkout_trip_bucket_expanded_item_height">196dp</dimen>
