--- a/project/src/main/res/layout/row_tablet_room_rate.xml
+++ b/project/src/main/res/layout/row_tablet_room_rate.xml
@@ -59,7 +59,7 @@
                     android:id="@+id/room_rate_urgency_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="#008c5d"
+                    android:textColor="#666666"
                     android:textSize="16sp"
                     app:textStyle="bold"/>
 
