--- a/project/src/main/res/layout/snippet_tablet_room_rate_add_select.xml
+++ b/project/src/main/res/layout/snippet_tablet_room_rate_add_select.xml
@@ -29,13 +29,12 @@
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/text_bed_type"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:textColor="#5f6061"
-            android:textSize="@dimen/hotel_details_bed_type_text_size"
-            android:ellipsize="end"
-            app:textStyle="light"/>
+            style="@style/BedTypeTextAppearance"/>
+
+        <com.expedia.bookings.widget.TextView
+            android:id="@+id/text_bed_type_with_cancellation"
+            style="@style/BedTypeTextAppearance"
+            android:visibility="gone"/>
 
     </LinearLayout>
 
