--- a/project/src/main/res/values/styles.xml
+++ b/project/src/main/res/values/styles.xml
@@ -919,6 +919,16 @@
         <item name="android:textSize">14sp</item>
     </style>
 
+    <style name="BedTypeTextAppearance">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:textColor">#5f6061</item>
+        <item name="android:textSize">@dimen/hotel_details_bed_type_text_size</item>
+        <item name="android:ellipsize">end</item>
+        <item name="textStyle">light</item>
+    </style>
+
     <style name="TripBucketBookButton">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/tripbucket_bookbutton_height</item>
