--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -71,8 +71,11 @@
     <color name="login_text_flight">#232323</color>
     <color name="login_text_tablet">#363636</color>
     <color name="expedia_plus_blue">#0085c9</color>
+    <color name="expedia_plus_blue_text">#ffffff</color>
     <color name="expedia_plus_silver">#808080</color>
+    <color name="expedia_plus_silver_text">#ffffff</color>
     <color name="expedia_plus_gold">#e7b40d</color>
+    <color name="expedia_plus_gold_text">#403f3f</color>
 
     <!-- CVV entry colors -->
     <color name="cvv_normal">#FFFFFF</color>
