--- a/project/src/main/res/values-sw600dp/styles.xml
+++ b/project/src/main/res/values-sw600dp/styles.xml
@@ -70,4 +70,27 @@
         <item name="android:layout_gravity">center_horizontal</item>
     </style>
 
+    <style name="CenterCaptionedIcon" />
+
+    <style name="CenterCaptionedIcon.Caption">
+        <item name="android:layout_marginLeft">36dp</item>
+        <item name="android:layout_marginRight">36dp</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:textColor">#a5180e0d</item>
+        <item name="android:textSize">18sp</item>
+        <item name="textStyle">condensed</item>
+    </style>
+
+    <style name="CenterCaptionedIcon.ActionButton">
+        <item name="android:layout_width">182dp</item>
+        <item name="android:layout_height">32dp</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:layout_marginTop">@dimen/pick_airport_button_top_margin</item>
+        <item name="android:background">@drawable/bg_tablet_search_result_error_action_button</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">14sp</item>
+        <item name="textStyle">medium</item>
+    </style>
+
 </resources>
