--- a/project/src/main/res/layout-sw600dp/include_wallet_button.xml
+++ b/project/src/main/res/layout-sw600dp/include_wallet_button.xml
@@ -1,48 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.expedia.bookings.widget.WalletButton xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/wallet_container"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="0dp" >
+                                          android:id="@+id/wallet_container"
+                                          android:layout_width="match_parent"
+                                          android:layout_height="wrap_content"
+                                          android:padding="0dp">
 
-    <com.expedia.bookings.widget.TextView
+    <TextView
         android:id="@+id/wallet_promo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="17dp"
-        android:text="@string/wallet_promo_offer"
-        android:textColor="#cc363636"
-        android:textSize="@dimen/login_button_text_size"
-        app:textStyle="light" />
-
-    <View
-        android:id="@+id/wallet_button"
-        style="@style/BookingSection"
         android:layout_width="match_parent"
-        android:layout_height="52dp"
-        android:contentDescription="@string/wallet_buy_with_google_wallet"
-        android:padding="0dp" />
-
-    <ImageView
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="@dimen/wallet_button_left_padding"
-        android:paddingLeft="@dimen/card_icon_padding"
-        android:src="@drawable/ic_tablet_google_wallet" />
+        android:layout_below="@id/wallet_button"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"
+        android:layout_marginTop="-4dp"
+        android:background="#55000000"
+        android:gravity="center"
+        android:paddingBottom="4dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:paddingTop="4dp"
+        android:text="@string/wallet_promo_offer"
+        android:textColor="#f0f0f0"
+        android:textSize="12sp"/>
 
-    <ProgressBar
-        android:id="@+id/wallet_progress_bar"
-        style="@style/ProgressBar"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:indeterminate="true"
-        android:visibility="gone" />
+    <FrameLayout
+        android:id="@+id/wallet_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <View
+            style="@style/BookingSection"
+            android:layout_width="match_parent"
+            android:layout_height="52dp"
+            android:layout_gravity="center_vertical"
+            android:contentDescription="@string/wallet_buy_with_google_wallet"
+            android:padding="0dp"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/wallet_button_left_padding"
+            android:paddingLeft="@dimen/card_icon_padding"
+            android:src="@drawable/ic_tablet_google_wallet"/>
+
+        <ProgressBar
+            android:id="@+id/wallet_progress_bar"
+            style="@style/ProgressBar"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_gravity="center"
+            android:indeterminate="true"
+            android:visibility="gone"/>
+    </FrameLayout>
 
 </com.expedia.bookings.widget.WalletButton>
