--- a/project/src/main/res/values-large/dimens.xml
+++ b/project/src/main/res/values-large/dimens.xml
@@ -3,4 +3,7 @@
     <!-- LocalExpert -->
     <dimen name="attraction_bubble_start_text_size">48dp</dimen>
 
+    <dimen name="padding_top_rooms_rates_ribbon">1dp</dimen>
+    <dimen name="hotel_row_price_text_view_max_width">150dp</dimen>
+
 </resources>
