--- a/project/src/main/res/values-xlarge/dimens.xml
+++ b/project/src/main/res/values-xlarge/dimens.xml
@@ -20,6 +20,11 @@
     <dimen name="login_field_spacing">28dp</dimen>
     <dimen name="login_bottom_room_spacing">6dp</dimen>
 
+    <dimen name="hotel_row_thumbnail_width">115dp</dimen>
+    <dimen name="hotel_row_thumbnail_height">105dp</dimen>
+    <dimen name="hotel_row_price_text_size">25sp</dimen>
+    <dimen name="hotel_row_proximity_text_size">16sp</dimen>
+
     <!-- LocalExpert -->
     <dimen name="attraction_bubble_start_text_size">76dp</dimen>
 
