--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -53,8 +53,8 @@
     <color name="flight_results_row_bg_pressed">#4572AD</color>
     <color name="flight_results_row_return_leg_bg">#3D6D7A</color>
     <color name="flight_results_row_return_leg_bg_pressed">#408CA1</color>
-    <color name="spinner_airport">#000000</color>
-    <color name="spinner_airport_details">#555555</color>
+    <color name="spinner_airport">#FFFFFF</color>
+    <color name="spinner_airport_details">#777777</color>
 
     <!-- Hotels colors -->
     <color name="hotels_cc_text_color_secondary">#868a8f</color>
