Assimilated '-xlarge' resource values

--- a/project/src/main/res/values-sw720dp-land/dimens.xml
+++ b/project/src/main/res/values-sw720dp-land/dimens.xml
@@ -11,4 +11,7 @@
     <!-- Tablet Launch Screen -->
     <dimen name="tablet_search_width">768dp</dimen>
 
+    <!-- Login screen -->
+    <dimen name="login_or_spacing">12dp</dimen>
+
 </resources>
