--- a/project/src/main/res/layout/gallery_item.xml
+++ b/project/src/main/res/layout/gallery_item.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+<ImageView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/image"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:src="@drawable/ic_text_dot" />
+    android:layout_width="150dp"
+    android:layout_height="150dp"
+    android:background="@drawable/bg_gallery_photo"
+    android:cropToPadding="true"
+    android:scaleType="centerCrop" />
