--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -62,7 +62,7 @@
     <color name="rooms_and_rates_notice_bg">#d9dbdd</color>
     <color name="rooms_and_rates_notice_bottom_div">#898989</color>
     <color name="actionbar_text_disabled">#505c69</color>
-    <color name="amenity_text_color_large">#737880</color>
+    <color name="amenity_text_color_large">#79848f</color>
     <color name="amenity_icon_color">#717880</color>
 
     <!-- Login -->
@@ -88,7 +88,7 @@
     <color name="dark_blue">#1C3061</color>
     <color name="dismiss">#72000000</color>
     <color name="calendar_header">#FFF3F3F3</color>
-    <color name="bg_expedia_list">#e7e7e7</color>
+    <color name="bg_expedia_list">#f5f5f5</color>
 
     <!-- BookingOverviewFragment -->
     <color name="overview_receipt_divider">#666D6D6D</color>
