--- a/project/src/main/res/layout/include_account_button.xml
+++ b/project/src/main/res/layout/include_account_button.xml
@@ -150,14 +150,15 @@
     <LinearLayout
         android:id="@+id/account_rewards_container"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/account_rewards_container_height"
-        android:gravity="center"
+        android:layout_height="wrap_content"
+        android:minHeight="@dimen/account_rewards_container_height_for_empty_message"
         android:visibility="gone">
 
         <TextView
             android:id="@+id/account_rewards_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/account_rewards_container_height"
+            android:gravity="center"
             android:textSize="@dimen/account_button_points_text_size"/>
     </LinearLayout>
 
