Fixed waypoint search box top margin on kitkat

--- a/project/src/main/res/layout-sw600dp/fragment_tablet_waypoint.xml
+++ b/project/src/main/res/layout-sw600dp/fragment_tablet_waypoint.xml
@@ -32,7 +32,8 @@
         android:id="@+id/search_bar_container"
         android:layout_width="@dimen/tablet_search_width"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/cancel_button"
+        android:layout_marginTop="?attr/waypointFragmentTopMargin"
+        android:layout_alignParentTop="true"
         android:layout_marginBottom="16dp"
         android:animateLayoutChanges="true"
         android:layout_centerHorizontal="true"
