3564: Fixed edge effect padding on launch destination tiles

--- a/project/src/main/res/layout/fragment_tablet_launch.xml
+++ b/project/src/main/res/layout/fragment_tablet_launch.xml
@@ -51,6 +51,7 @@
             android:id="@+id/tiles_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:layout_marginBottom="@dimen/extra_navigation_bar_padding"/>
 
     </LinearLayout>
